--- a/static/stat566/qe_applied_stat_inclass.Rmd
+++ b/static/stat566/qe_applied_stat_inclass.Rmd
@@ -19,6 +19,7 @@ output:
       collapsed: yes
       smooth_scroll: yes
 header-includes:
+    - \usepackage{multicol}
     - \usepackage{booktabs}
     - \usepackage{tabularx}
     - \setlength\tabcolsep{0.1pt}
@@ -27,7 +28,12 @@ header-includes:
 
 ---
 
-
+\setlength\tabcolsep{0.1pt}
+\setlength\lineskip{0pt}
+\setlength\parskip{0pt}
+\fontsize{8pt}{0pt}
+\footnotesize
+\setlength{\columnseprule}{0.1pt}
 
 
 # 
@@ -46,6 +52,7 @@ Fountain*, Crain
 
 ### 2015S4
 [2018S4][] [2019S1][] 
+\begin{multicols}{2}
 
 Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$, with the restriction that $\beta_1-\beta_0=0$. Find the least-squares estimators of the regression coefficients.
 
@@ -68,11 +75,13 @@ $=\frac{\sum_{i=1}^n(1+x_i)y_i\sum_{i=1}^nx_i^4\sum_{i=1}^n(1+x_i)^2-\sum_{i=1}^
 
 $\hat\beta_0=\hat\beta_1=\frac{\sum_{i=1}^n(1+x_i)y_i\sum_{i=1}^nx_i^4-\sum_{i=1}^nx_i^2y_i\sum_{i=1}^n(1+x_i)x_i^2}{\sum_{i=1}^nx_i^4\sum_{i=1}^n(1+x_i)^2-[\sum_{i=1}^nx_i^2(1+x_i)]^2}$
 
+\end{multicols}
+
 ## 2015F 
 
 ### 2015F1
 [2016S1][] [566-HW2-6] [8.3 The One-Quarter Fraction of the 2k Design p.344] 
-
+\begin{multicols}{2}
 You must design an experiment to test six factors, each having two levels. Your budget will only allow sixteen runs. Furthermore, due to time constraints, only eight runs can be done on a given day, so you will have to conduct the experiment in 2 blocks. You may assume that 4-way and higher interactions are not important.
 
 Show all of the following:
@@ -151,10 +160,11 @@ AE=BC=DF=ABCDEF
 AB=CE, AC=BE, AD=EF, AE=BC=DF, AF=DE, BD=CF, BF=CD, ABD=CDE=ACF=BEF, ACD=BDE=ABF=CEF 
 
 
+\end{multicols}
 
 ### 2015F2
 [2017F1][] [Example 8.2 The Tool Life Data]
-
+\begin{multicols}{2}
 A company is comparing two different methods of processing their raw material. They begin with 8 batches of material, which are randomly assigned to one of the two processes. The quality of the final product is measured on a 50-point scale. There is some concern that the outside temperature on each day might have an effect on the product (and the effect might be different for the two processes), and so it is recorded so that it can be taken into account. The following table shows and ordered pair for each batch, consisting of the quality measurement and the temperature.
 
  --------- ---------------
@@ -191,17 +201,22 @@ $dfE_{Full}=n-(k+1)=8-(3+1)=4$, $dfE_{Reduced}=n-(k+1)+r=5$
 
 $F=\frac{(SSE_{Reduced}-SSE_{Full})/r}{SSE_{Full}/dfE_{Full}}$, $df_{nume}=1$, $df_{deno}=4$
 
-
+\end{multicols}
 
 ### 2015F3
 [2016S3][] [2017F2][]
+\begin{multicols}{2}
 
 a) Explain the difference between fixed and random effects in an experimental design. Give an example to illustrate your explanation.
 
 b) Explain the difference between crossed and nested effects in an experimental design. Give an example to illustrate your explanation. Make sure to discuss which terms would be absent from the model, and the resulting effect on sums of squares and degrees of freedom in the ANOVA table.
 
+\end{multicols}
+
 ### 2015F4
 [2019S1][]
+
+\begin{multicols}{2}
 
 Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$ with the additional restrictions that $\beta_1=0$, $\beta_0=2\beta_2$. Find the least-squares estimators of $\beta_0$ and $\beta_1$.
 
@@ -211,11 +226,14 @@ $\frac{\partial SSE}{\partial\beta_0}=2\sum_{i=1}^n(y_i-\beta_0-2\beta_0x_i^2)(-
 $\hat\beta_0=\frac{\sum_{i=1}^nx_i^2y_i}{\sum_{i=1}^nx_i^2+2\sum_{i=1}^nx_i^4}$
 $\hat\beta_2=\frac{2\sum_{i=1}^nx_i^2y_i}{\sum_{i=1}^nx_i^2+2\sum_{i=1}^nx_i^4}$
 
+\end{multicols}
+
 ## 2016S
 Fountain, Tableman*
 
 ### 2016S1
 [2015S1][] [2017SD2][] [7.6 Confouding the 2k Factorial Design in Four Blocks]
+\begin{multicols}{2}
 
 You must design an experiment to test six factors, each having two levels. Your budget will only allow sixteen runs. Furthermore, due to time constraints, only four runs can be done on a given day, so you will have to conduct the experiment in 4 blocks. You may assume that 4-way and higher interactions are not important.
 
@@ -299,6 +317,7 @@ Day4: (1), abce, adef, bcdf
 AB=CE, AC=BE, AD=EF, AF=DE, BD=CF, BF=CD
  
 
+\end{multicols}
 
 
 
@@ -307,6 +326,7 @@ AB=CE, AC=BE, AD=EF, AF=DE, BD=CF, BF=CD
 
 ### 2016S2
 [2017F3][] [2018S3][]
+
 
 The multiple linear regression model $y_i=\beta_0+\beta_1x_{i1}+\beta_2X_{i2}+\beta_3X_{i3}+\beta_4X_{i4}+\beta_5X_{i5}+\varepsilon_i$
 was fit to a data set of 75 observations. The regression SS’s (SSR) were partitioned sequentially into
@@ -329,6 +349,8 @@ The model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i3}+\beta_5X_{i5}+\varepsilon_i$ 
 
  Total          703(74)
  ----------------------------------------------------------------------------
+
+\begin{multicols}{2}
 
 The additional(extral) sum of squares F test (partial F test), $SSE_{reduced}-SSE_{Full}$ is called the extra sum of squares due to $j^{th}$ predictor given that all the other terms are in the model.
 
@@ -378,6 +400,8 @@ $F=\frac{(489-336)/(71-69)}{336/69}=15.70982$,
 $F_{p,2,69}=15.70982$; $F_{0.05,2,50}=3.18$, $F_{0.05,2,100}=3.09$; $\therefore p<0.05$, reject $H_0$ at 0.05 level of significance
 
 
+\end{multicols}
+
 ### 2016S3
 [2017F2][]
 
@@ -405,6 +429,8 @@ In the multiple regression model with $p-1$ independent variables $X_j$, let the
 Jong Sung Kim*, Brad Crain
 
 ### 2016F1
+
+\begin{multicols}{2}
 
 The data for this question consist of 12 measurements on each of 2 quantitative regressor variables $x_1$ and $x_2$ and on a dependent variable y. The data are displayed below:
 
@@ -436,6 +462,9 @@ The data for this question consist of 12 measurements on each of 2 quantitative 
  12  19  3 121 9 121        0
  --------------------------------
  
+
+\end{multicols}
+ 
 ```{r}
 x1 <- c(3,3,3,7,7,12,12,12,12,12,19,19)
 x2 <- c(1,2,2,1,3,1,1,2,3,3,2,3)
@@ -446,6 +475,8 @@ summary(model)
 anova(model)
 ```
  
+\begin{multicols}{2}
+
  
 The model to be fit to the data is $Y =\beta_0+\beta_1x_{1}+\beta_2X_{2}+\varepsilon_i$. What follows is partially incomplete SAS output. Although the output is incomplete, there is enough information given that you can answer the questions that follow with a minimal amount of calculation. Note that Type I SS is the same as Seq SS.
 
@@ -529,6 +560,8 @@ Parameter Estimates
  x1        1  8.15560           20946
  ---------------------------------------- 
 
+
+
 (a) Do a hypothesis test, at the .01 level of significance, of $H_0:\beta_1=\beta_2=0$ vs. $H1$: At least one of $\beta_1$ or $\beta_2\neq0$.
 
 $dfR=2$,$dfT=12-1$,$dfE=11-9=2$;
@@ -584,7 +617,12 @@ $F=\frac{SS_{LOF}/df_{LOF}}{MS_{PE}}=\frac{675.87576/7}{28/3}=10.34504$
 
 $F(0.05,6,3)=8.94$. Reject $H_0$ at the .05 level of significance.
 
+
+\end{multicols}
+
 ### 2016F2
+
+\begin{multicols}{2}
 
 Data were collected on each of two quantitative regressor variables $X_1$ and $X_2$, a dichotomous categorical variable which we shall call “group”, and a dependent variable Y. The data are displayed below:
 
@@ -630,7 +668,12 @@ Last row: $1, X_{1i}, X_{2i}, X_{2i}^2, 0, 0, 0, 0$, $1,3.54,17,289,0,0,0,0$
 
   iv. It is desired to know whether the slope coefficients on $x_1$ and $x_2$ for the first group are equal.$\beta_1+\beta_5=\beta_2+\beta_6$
 
+
+\end{multicols}
+
 ### 2016F3
+
+\begin{multicols}{2}
 
 The following is part of the SAS output from a simple linear regression model: $y_i=\beta_0+\beta x_i+\varepsilon_i$, where $i=1,..,13$, and $y_i$ and $x_i$ are the ith punter’s average punting distance and right leg strength, respectively. Each punter punted 10 times and the average distance was measured. In addition, measure of right leg strength (lb lifted) was taken via a weight lifting test.
 
@@ -740,6 +783,10 @@ Output Statistics
  13  165.1700 159.3344  5.2769      147.7201 170.9488 121.0281 197.6408 5.8356
  -------------------------------------------------------------------------------
 
+
+\end{multicols}
+
+
 ```{r}
 x <- c(170,140,180,160,170,150,170,110,120,130,120,140,160)
 y <- c(162.50,144.00,147.50,163.50,192.00,171.75,162.00,104.83,105.67,117.58,140.25,150.17,165.17)
@@ -758,7 +805,10 @@ se_y_new <- sqrt(275.06005*(1+1/13+(170-bar_x)^2/S_xx))
 
 ```
 
- 
+\begin{multicols}{2}
+
+
+
 (a) Find the three residual values at x = 170.
 
 $\hat y=14.90696+0.90267*170=168.3609$;$162.5-168.3609=-5.8609$,$192-168.3609=23.6391$,$162-168.3609=-6.3609$
@@ -777,7 +827,13 @@ $se(y_0)=\sqrt{MSE(1+\frac1n+\frac{(x_0-\bar x)^2}{S_{XX}})}=17.83779$
 
 $168.3609\pm2.200985*17.83779$, $(129.1002,207.6216)$
 
+
+\end{multicols}
+
 ### 2016F4
+
+\begin{multicols}{2}
+
 
 Prior to 1985, Meily Lin had observed that some colors of birthday balloons seem to be harder to inflate than others. She ran this experiment to determine whether balloons of different colors are similar in terms of the time taken for inflation to a diameter of 7 inches. Four colors were selected from a single manufacturer. An assistant blew up the balloons and the experimenter recorded the times (to the nearest 1/10 second) with a stop watch. This experiment was replicated 4 times, and the data including the order are displayed in the SAS code below, where color 1 = pink, 2 = yellow, 3 = orange, and 4 = blue.
 
@@ -839,8 +895,14 @@ Least Squares Means for effect color Pr > |t| for H0: LSMean(i)=LSMean(j) Depend
  4   0.9271 0.0034 0.0060
  -------------------------------
 
+
+\end{multicols}
+
 ### 2016F5
 [BIBD]
+
+\begin{multicols}{2}
+
 
 Consider an experiment to compare 7 treatments in block of size 5. Taking all possible combinations of five treatments from seven gives a balanced incomplete block design with each treatment level occurring 15 times. Hint: Figure out $p, t, k, r, \lambda$ and their relationships.
 
@@ -860,11 +922,15 @@ $\lambda=\frac{(k-1)}{a-1}r=\frac{2}{3}r\in\mathbf{N^+}$
 
 $r$ is a multiple of 3 and 5 (in b.), $r=15$ is the smallest number of observations per treatment for a BIBD with $a=7$, $k=5$.
 
+
+\end{multicols}
+
 ## 2017S
 Brad Crain, Jong Sung Kim*
 
 ### 2017SR1
 [2018S1][]
+\begin{multicols}{2}
 
 A company is comparing two different methods of processing their raw material. They begin with 8 batches of material, which are randomly assigned to one of the two processes. The quality of the finalproduct is measured on a 50-point scale. There is some concern that the outside temperature on each day might have an effect on the product (and the effect might be different for the two processes), and so it is recorded so that it can be taken into account. The following table shows and orderedpair for each batch, consisting of the quality measurement and the temperature.
 
@@ -880,8 +946,11 @@ b) Write the matrix form of the appropriate model. Show the contents and dimensi
 
 c) Suppose that you wish to test for equality of the two slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?
 
+\end{multicols}
+
 ### 2017SR2
 [2019S1][]
+\begin{multicols}{2}
 
 Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$
 with the additional restrictions that $\beta_1=1$ and $\beta_2=\beta_0/2$. Find the least-squares estimators of $\beta_0$, $\beta_1$, $\beta_2$.
@@ -892,8 +961,15 @@ $$\frac{\partial SSE}{\partial\beta_0}=-2\sum_{i=1}^n(y_i-\hat\beta_0-x_i-\frac{
 
 $$\hat\beta_0=\frac{\sum_{i=1}^n(y_i-x_i)}{\sum_{i=1}^n(1+\frac{x_i^2}{2})},\hat\beta_1=1,\hat\beta_2=\frac{\sum_{i=1}^n(y_i-x_i)}{2\sum_{i=1}^n(1+\frac{x_i^2}{2})}$$
 
+
+\end{multicols}
+
 ### 2017SD1
 [Latin Square]
+
+\begin{multicols}{2}
+
+
 Given a educational material evaluation experiment where there are three possible blocking factors [R,C,G], each with six levels $[R_{1..6};C_{1..6};G_{1..6}]$:
 
 1. Write out the model equation of the Latin Square design if the blocking factors R and C are used, and G is disregarded.
@@ -922,8 +998,14 @@ $\frac{(df_{E(LS)}+1)(df_{E(CRD)}+3)}{(df_{E(LS)}+3)(df_{E(CRD)}+1)}=2.3$
 
 $df_{E(LS)}=(p-1)(p-2)=20$,$(df_{E(GS)}=(p-1)(p-3)=15$, $df_{E(CRD)}=a(n-1)$
 
+
+\end{multicols}
+
 ### 2017SD2
 [8.3 The One-Quarter Fraction of the 2k Design p.344] [7.7 table 7.9]
+
+\begin{multicols}{2}
+
 
 Given a Blocked $2^{6-2}$ design with Factors [A,B,C,D,E,F],Generators E=ABC, F=BCD and Defining Contrasts AB, CD
 
@@ -963,11 +1045,17 @@ AB=CE=ACDF=BDEF
 
 CD=ABDE=BF=ACEF
 
+\end{multicols}
+
+
 ## 2017F
 Robert Fountain*, Daniel Taylor-Rodriguez
 
 ### 2017F1
 [2018S1][] [2019S3][]
+
+\begin{multicols}{2}
+
 
 A company has developed two specialized training workshops for their employees. Each of the 12 employees is randomly assigned to one of the two workshops. The company would like to develop a model that could be used to predict each employee’s performance score (a number from 0 to 100) based on their attendance at the workshops. The previous year’s performance score is also available for use as a predictor. The following table shows and ordered pair for each employee, consisting of the current performance score and the previous year’s score.
 
@@ -983,7 +1071,13 @@ b) Write the matrix form of the appropriate model. Show the contents and dimensi
 
 c) Suppose that you wish to test for equality of the two slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?
 
+
+\end{multicols}
+
 ### 2017F2
+
+\begin{multicols}{2}
+
 
 a) Explain the difference between fixed and random effects in an experimental design. Give an example to illustrate your explanation.
 
@@ -1010,8 +1104,14 @@ A factor is nested within another factor when each category of the first factor 
 
 If two factors are crossed, you can calculate an interaction. If they are nested, you cannot because you do not have every combination of one factor along with every combination of the other.
 
+
+\end{multicols}
+
 ### 2017F3
 [2018S3][] [2016S2][]
+
+\begin{multicols}{2}
+
 
 The multiple linear regression model $y_i=\beta_0+\beta_1x_{i1}+\beta_2X_{i2}+\beta_3X_{i3}+\beta_4X_{i4}+\beta_5X_{i5}+\varepsilon_i$
 was fit to a data set of 75 observations. The regression SS’s (SSR) were partitioned sequentially into
@@ -1045,8 +1145,15 @@ Answer the following from the above information:
 
 (d) Calculate the F-statistic for testing $H_0:\beta_2=\beta_4=0$.
 
+
+\end{multicols}
+
+
 ### 2017F4
 [2019S1][]
+
+\begin{multicols}{2}
+
 
 Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$ with the additional restrictions that $\beta_0=1$, $\beta_1-\beta_2=0$. Find the least-squares estimators of the regression coefficients.
 
@@ -1055,11 +1162,16 @@ Let $SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-1-\beta_1x_i-\beta_1x_i^2)^
 $\frac{\partial SSE}{\partial\beta_2}=2\sum_{i=1}^n(y_i-1-\beta_1x_i-\beta_1x_i^2)(-x_i-x_i^2)\overset{set}{=}0$;
 $\hat\beta_1=\hat\beta_2=\frac{\sum_{i=1}^n(1+x_i^2)(y_i-1)}{\sum_{i=1}^n(x_i+x_i^2)^2}$
 
+
+\end{multicols}
+
 ## 2018S
 Robert Fountain*, Daniel Taylor-Rodriguez
 
 ### 2018S1
 [2019S3][]
+
+\begin{multicols}{2}
 
 A company has developed three specialized training workshops for their employees. Each of the 12 employees is randomly assigned to one of the three workshops. The company would like to develop a model that could be used to predict each employee’s performance score (a number from 0 to 100) based on their attendance at the workshops. The previous year’s performance score is also available for use as a predictor. The following table shows and ordered pair for each employee, consisting of the current performance score and the previous year’s score.
 
@@ -1103,8 +1215,12 @@ $dfE_{Full}=n-(k+1)=12-(5+1)=6$, $dfE_{Reduced}=n-(k+1)+r=8$
 
 $F=\frac{(SSE_{Reduced}-SSE_{Full})/(dfE_{Reduced}-dfE_{Full})}{SSE_{Full}/dfE_{Full}}$, $df_{nume}=10-8=2$, $df_{deno}=6$
 
+
+\end{multicols}
+
 ### 2018S2
 [2015S3][] [2019S2][]
+\begin{multicols}{2}
 
 A company that produces textiles is trying to determine if the final quality is determined by production site (A), machine operator (B), and thread type (C). The company operates 3 production sites, and all 3 will participate in the experiment. At each of the 3 sites, 5 machine operators will be randomly selected. The company uses two different types of thread. Each of the operators will produce 3 samples of cloth using each type of thread, yielding a total of $3\times5\times2\times3=90$ observations.
 
@@ -1146,6 +1262,9 @@ $\sum_{i=1}^a\tau_i=0$, $\beta_{j(i)}\sim N(0,\sigma^2_{\beta})$, $(\gamma\beta)
 c) Create an abbreviated ANOVA table that has two columns: one column that lists the effects in the model (including the appropriate main effects, interactions, and nested effects), and a second column that gives the degrees of freedom for each item in the first column.
 
 
+\end{multicols}
+
+
  ------ --- --- ---  -----
  Source SS  df  MS   F    
 
@@ -1177,6 +1296,9 @@ c) Create an abbreviated ANOVA table that has two columns: one column that lists
 
 ### 2018S3
 [2017F3][] [2016S2][]
+
+\begin{multicols}{2}
+
 
 The multiple linear regression model $y_i=\beta_0+\beta_1x_{i1}+\beta_2X_{i2}+\beta_3X_{i3}+\beta_4X_{i4}+\beta_5X_{i5}+\varepsilon_i$
 was fit to a data set of 75 observations. The regression SS’s (SSR) were partitioned sequentially into
@@ -1211,8 +1333,14 @@ Answer the following from the above information:
 (d) Calculate the F-statistic for testing $H_0:\beta_2=\beta_4=0$.
 
 
+\end{multicols}
+
+
 ### 2018S4
 [2019S1][]
+
+\begin{multicols}{2}
+
 
 Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$ with the additional restrictions that $\beta_1=0$, $\beta_0=2\beta_2$. Find the least-squares estimators of $\beta_0$, $\beta_1$, and $\beta_2$.
 
@@ -1222,10 +1350,15 @@ $\frac{\partial SSE}{\partial\beta_2}=2\sum_{i=1}^n(y_i-2\beta_2-\beta_2x_i^2)(-
 $\hat\beta_2=\frac{\sum_{i=1}^n(2+x_i^2)y_i}{\sum_{i=1}^n(2+x_i^2)^2}$
 $\hat\beta_0=\frac{2\sum_{i=1}^n(2+x_i^2)y_i}{\sum_{i=1}^n(2+x_i^2)^2}$
 
+\end{multicols}
+
 ## 2018F
 Robert Fountain*, Daniel Taylor-Rodriguez
 
 ### 2018F1
+
+\begin{multicols}{2}
+
 
 The weights ($y_i$, kilograms) and corresponding heights ($x_i$, centimeters) of 10 randomlysampled adolescents (i= 1,..,10) are recorded, and the following summary statistics are computed:
 
@@ -1261,8 +1394,13 @@ e) Compute 95% simultaneous two-sided confidence intervals for the intercept and
 
 $\hat\beta_1\pm t_{\frac{0.05}{k+1},n-2}se(\hat\beta_1)=0.5805085\pm2.31\sqrt{0.1514673}$, $(-0.3185158,1.479533)$
 
+
+\end{multicols}
+
 ### 2018F2
 [565-HW1]
+
+\begin{multicols}{2}
 
 
 City planners are evaluating the effectiveness of a new “intelligent” traffic control system in reducing the amount of time motorists must spend on city streets. A total of 24 simulations are run: 4 simulations for each of the 6 combinations of control system (old or new) and traffic intensity (light, moderate, or heavy). All simulations use different random seeds, the combinations are run in a completely random order, and the median travel time (minutes) is recorded for each simulation. For each combination, the following table gives the average and sample standard deviation of the median travel times from the 4 simulations assigned that combination:
@@ -1294,6 +1432,9 @@ Assumptions: $\varepsilon_{ijk}\sim iid N(0,\sigma^2)$ (constant variance, zero 
 
 b) Produce an ANOVA table with all appropriate sources of variation, including the (corrected) total. Include sums of squares, degrees of freedom, and appropriate mean squares.
 
+
+\end{multicols}
+
 \begin{tabular}{l|l|l|l|l|l|l|l}
 term &i(f) &j(f) &k(r) & df & SS & MS & EMS\\\hline
 
@@ -1319,6 +1460,7 @@ SSE <- (4-1)*(1^2+2.5^2+3.5^2+2.5^2+2^2+3.5^2)
 SS_a/1;SS_b/2;SS_ab/2;SSE/18; SS_a+SS_b+SS_ab+SSE
 ```
 
+\begin{multicols}{2}
 
 c) Test whether your model in part (a) may be reduced to a model in which the effects of system and traffic intensity are purely additive. Remember to state the null and alternative hypotheses. Use $\alpha=0.05$.
 
@@ -1328,8 +1470,12 @@ d) Form a two-sided 95% confidence interval for the difference in median travel 
 
 $\bar y_{12.}-\bar y_{22.}\pm t_{\frac\alpha2,18}\sqrt{\frac{2MSE}n}=14-8\pm2.1\sqrt{\frac{2*7}4}=6\pm3.9287$;$[2.0713,9.9287]$
 
+
+\end{multicols}
+
 ### 2018F3
 [13.2]
+\begin{multicols}{2}
 
 Consider the linear mixed model
 $y_{ijk}=\mu+\alpha_i+\beta_{ij}+\varepsilon_{ijk}$, $i=1,..,a$ $j=1,..,b$ $k=1,..,n$, $\sum_{i=1}^a\alpha_i=0$, $\beta_{ij}\sim N(0,\sigma_{\beta}^2)$, $\varepsilon_{ij}\sim N(0,\sigma_{\varepsilon}^2)$
@@ -1395,6 +1541,9 @@ $=\sigma_{\beta}^2+\frac{1}{b}\sigma_{\beta}^2-\frac2b\sigma_{\beta}^2+\frac{1}{
 $E[\sum_{i=1}^a\sum_{j=1}^b(\bar y_{ij.}-\bar y_{i..})^2]=\sum_{i=1}^a\sum_{j=1}^b(Var[\bar y_{ij.}-\bar y_{i..}]+E[\bar y_{ij.}-\bar y_{i..}]^2)$
 $\sum_{i=1}^a\sum_{j=1}^b[\frac{b-1}{b}(\sigma_{\varepsilon}^2+\frac{1}{n}\sigma_{\varepsilon}^2)+0]=a(b-1)(\sigma_{\beta}^2+\frac1n\sigma_{\varepsilon}^2)$
 
+
+\end{multicols}
+
 e) In terms of the data, write a formula for the usual unbiased (ANOVA) estimate of $\sigma_{\beta}^2$. (Define all new notation, if you use any)
 
 |term |i(f) |j(r) |k(r) | df | EMS | F  |
@@ -1407,6 +1556,9 @@ e) In terms of the data, write a formula for the usual unbiased (ANOVA) estimate
 $\hat\sigma^2=\frac{MS_{AB}-MS_{E}}n$; $E[\hat\sigma^2]=\frac1n(n\sigma^2_{\beta}+\sigma_{\varepsilon}^2-\sigma_{\varepsilon}^2)=\sigma^2_{\beta}$
 
 ### 2018F4
+
+\begin{multicols}{2}
+
 
 Consider a **randomized complete block design** with 12 blocks and a single treatment factor having 3 levels. Let $Y_{ij}$ denote the response measured for an experimental unit in block $j$ that receives treatment $i$ for $i=1,2,3$ and $j=1,..,12$. Suppose there is also a
 covariate whose value $X_{ij}$ is measured for each experimental unit.
@@ -1421,6 +1573,9 @@ Model 4: $Y_{ij}=\mu+\gamma_j+\beta x_{ij}+\varepsilon_{ij}$ $SS(Res)=420$
 The treatment effects are $\alpha=(\alpha_1,\alpha_2,\alpha_3)'$ and the block effects are $\alpha=(\gamma_1,\gamma_2,..,\gamma_{12})'$.
 The corrected total sum of squares is 820.
 
+
+\end{multicols}
+
  --------------------------------------------------------------------------------------------------
     $SS_F$  $-\alpha$ $SS_{\beta\gamma}$ $-\beta$ $SS_{\alpha\gamma}$ $-\alpha-\beta$ $SS_{\gamma}$
  -  ---     ---       ---                ---      ---                 ---             ---
@@ -1432,6 +1587,9 @@ The corrected total sum of squares is 820.
  
  T  820(35)
  --------------------------------------------------------------------------------------------------
+
+\begin{multicols}{2}
+
 
 a) Find the sequential sums of squares for $\gamma_j$, $\alpha_i$, and $\beta$, in that order.
 
@@ -1474,12 +1632,14 @@ Compute the residual sum of squares for this model.
 
 $SSE_{\alpha}=820-(420-300)=700$
 
+\end{multicols}
 
 ## 2019S
 Robert Fountain*, Daniel Taylor-Rodriguez
 
 ### 2019S1
 [2018S4][] 
+\begin{multicols}{2}
 
 Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$, with the restriction that $\beta_0=0$. Find the least-squares estimators of the regression coefficients.
 
@@ -1497,9 +1657,11 @@ $\hat\beta_2=\frac{\sum_{i=1}^nx_i^2y_i\sum_{i=1}^nx_i^2-\sum_{i=1}^nx_iy_i\sum_
 
 $\hat\beta_1=\frac{\sum_{i=1}^nx_iy_i}{\sum_{i=1}^nx_i^2}-\frac{\sum_{i=1}^nx_i^3[\sum_{i=1}^nx_i^2y_i\sum_{i=1}^nx_i^2-\sum_{i=1}^nx_iy_i\sum_{i=1}^nx_i^3]}{\sum_{i=1}^nx_i^2[\sum_{i=1}^nx_i^4\sum_{i=1}^nx_i^2-(\sum_{i=1}^nx_i^3)^2]}$
 
+\end{multicols}
 
 ### 2019S2
 [2015S3][] [2018S2][][566-HW2-1] [566-HW5-2]
+\begin{multicols}{2}
 
 A manufacturer wishes to know if operator (A), material (B), and heat (C) affect the outcome of the product being produced. All of the machines being used operate at the same four heat settings. Five operators are randomly chosen. There are fifteen varieties of material that can be used, and three of these are assigned to each of the five operators. For each operator, that means that there are 12 combinations of heat and material that can be used. The operator produces two replications of each of these, for a total of $5\times3\times4\times2=120$ observations.
 Incorrectly treating all main effects as fixed and all combinations of factors as crossed, the statistician produces the ANOVA table shown below.
@@ -1539,6 +1701,9 @@ Model: $y_{ijkl}=\mu+\tau_i+\beta_{j(i)}+\gamma_k+(\tau\gamma)_{ik}+(\beta\gamma
 
 $\tau_i\sim N(0,\sigma^2_{\tau})$, $\beta_{j(i)}\sim N(0,\sigma^2_{\beta})$, $(\gamma\beta)_{kj(i)}\sim N(0,\sigma^2_{\gamma\beta})$, $(\tau\gamma)_{ik}\sim N(0,\sigma^2_{\tau\gamma})$, $\varepsilon_{(ijk)l}\sim N(0,\sigma^2)$, $\sum_{k=1}^c\gamma_k=0$
 
+
+\end{multicols}
+
  ------ --- --- --- -------
  Source SS  df  MS  F    
 
@@ -1569,6 +1734,7 @@ $\tau_i\sim N(0,\sigma^2_{\tau})$, $\beta_{j(i)}\sim N(0,\sigma^2_{\beta})$, $(\
 
 ### 2019S3
 [2015S2][]
+\begin{multicols}{2}
 
 A company has developed two possible manufacturing processes. They will produce 5 items with each process, in a completely random order. Then they will measure the quality (Y) of each item on a 100-point scale. They suspect that the relative humidity during production might affect the outcome, so they also record it (X). They would like to develop a model that could be used to predict the outcome quality based on the process, with the relative humidity as a covariate. The following table shows and ordered pair for each item, consisting of the quality score and the humidity measurement.
 
@@ -1603,3 +1769,6 @@ $\begin{bmatrix} 0&0&0&1\end{bmatrix}_{10\times4}\begin{bmatrix} \beta_0 \\ \bet
 $dfE_{Full}=n-(k+1)=10-(3+1)=6$, $dfE_{Reduced}=n-(k+1)+r=7$
 
 $F=\frac{(SSE_{Reduced}-SSE_{Full})/(dfE_{Reduced}-dfE_{Full})}{SSE_{Full}/dfE_{Full}}$, $df_{nume}=7-6=1$, $df_{deno}=6$
+
+
+\end{multicols}
